improved spacing fixed icons

--- a/css/creative.css
+++ b/css/creative.css
@@ -257,6 +257,8 @@ header .header-content .header-content-inner p {
   text-align: center;
   top: 20px;
   bottom: 400px;
+  padding-left: 150px;
+  padding-right: 150px;
 }
 .sponsors {
   align-items: center;
